cpp/zad1/error_log.txt
main.cpp: In function ‘int main()’:
main.cpp:21:2: error: expected ‘}’ at end of input
   21 | }
      |  ^
main.cpp:5:11: note: to match this ‘{’
    5 | int main(){
      |           ^
